--- a/next/package.json
+++ b/next/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@vanilla-extract/css": "^1.15.5",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18"
@@ -17,9 +18,9 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@vanilla-extract/next-plugin": "^2.4.5",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
-    "sass": "^1.77.8",
     "typescript": "^5"
   }
 }
